# huffman

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  vowellish.dot
src/: Makefile.am  huffdec.cpp  huffdot.cpp  huffenc.cpp  hufflib.cpp  hufflib.h  huffman.cpp  huffman.h  hufftest.cpp  main.cpp
